--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,9 +1,11 @@
-torch
-torchaudio
-transformers
-datasets
-librosa
-soundfile
-accelerate
-evaluate
-jiwer
+torch>=2.0.0
+torchaudio>=2.0.0
+torchvision>=0.15.0
+transformers>=4.30.0
+datasets>=2.12.0
+librosa>=0.10.0
+soundfile>=0.12.0
+accelerate>=0.20.0
+evaluate>=0.4.0
+jiwer>=3.0.0
+tf-keras>=2.15.0
