--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ kapampangan_wav2vec2_model/checkpoint-180/trainer_state.json
 /kapampangan_mt_model
 /kapampangan_wav2vec2_model
 /ffmpeg
+kapampangan_wav2vec2_model/config.json
+/kapampangan_wav2vec2_model
+kapampangan_wav2vec2_model/training_args.bin
+kapampangan_wav2vec2_model/vocab.json
