--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ kapampangan_wav2vec2_model/config.json
 /kapampangan_wav2vec2_model
 kapampangan_wav2vec2_model/training_args.bin
 kapampangan_wav2vec2_model/vocab.json
+/kapampangan_mt_model
