--- a/kapampangan_mt_model/config.json
+++ b/kapampangan_mt_model/config.json
@@ -15,16 +15,19 @@
   "decoder_ffn_dim": 2048,
   "decoder_layerdrop": 0.0,
   "decoder_layers": 6,
-  "decoder_start_token_id": 57197,
-  "decoder_vocab_size": 57198,
+  "decoder_start_token_id": 65000,
+  "decoder_vocab_size": 65001,
+  "do_blenderbot_90_layernorm": false,
   "dropout": 0.1,
   "encoder_attention_heads": 8,
   "encoder_ffn_dim": 2048,
   "encoder_layerdrop": 0.0,
   "encoder_layers": 6,
   "eos_token_id": 0,
-  "extra_pos_embeddings": 57198,
+  "extra_pos_embeddings": 0,
+  "force_bos_token_to_be_generated": false,
   "forced_eos_token_id": 0,
+  "gradient_checkpointing": false,
   "id2label": {
     "0": "LABEL_0",
     "1": "LABEL_1",
@@ -44,12 +47,12 @@
   "normalize_embedding": false,
   "num_beams": null,
   "num_hidden_layers": 6,
-  "pad_token_id": 57197,
+  "pad_token_id": 65000,
   "scale_embedding": true,
   "share_encoder_decoder_embeddings": true,
   "static_position_embeddings": true,
   "torch_dtype": "float32",
   "transformers_version": "4.53.1",
   "use_cache": true,
-  "vocab_size": 57198
+  "vocab_size": 65001
 }
