--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ kapampangan_wav2vec2_model/vocab.json
 /kapampangan_mt_model
 Kapampangan-to-English M2M100 Training.ipynb
 /kapampangan_wav2vec2_model
+/kapampangan_mt_nllb
