--- a/kapampangan_mt_model/tokenizer_config.json
+++ b/kapampangan_mt_model/tokenizer_config.json
@@ -16,7 +16,7 @@
       "single_word": false,
       "special": true
     },
-    "65000": {
+    "57197": {
       "content": "<pad>",
       "lstrip": false,
       "normalized": false,
@@ -31,9 +31,9 @@
   "model_max_length": 512,
   "pad_token": "<pad>",
   "separate_vocabs": false,
-  "source_lang": "en",
+  "source_lang": "tgl",
   "sp_model_kwargs": {},
-  "target_lang": "fr+fr_BE+fr_CA+fr_FR+wa+frp+oc+ca+rm+lld+fur+lij+lmo+es+es_AR+es_CL+es_CO+es_CR+es_DO+es_EC+es_ES+es_GT+es_HN+es_MX+es_NI+es_PA+es_PE+es_PR+es_SV+es_UY+es_VE+pt+pt_br+pt_BR+pt_PT+gl+lad+an+mwl+it+it_IT+co+nap+scn+vec+sc+ro+la",
+  "target_lang": "eng",
   "tokenizer_class": "MarianTokenizer",
   "unk_token": "<unk>"
 }
