--- a/Requirements.txt
+++ b/Requirements.txt
@@ -2,11 +2,11 @@
 numpy>=1.21.0,<2.0
 scipy>=1.7.0,<1.12.0
 
-# PyTorch ecosystem
+# PyTorch ecosystem (CUDA 12.1 wheels available for your RTX 4050)
 torch>=2.0.0
 torchaudio>=2.0.0
 torchvision>=0.15.0
-torchcodec>=0.1.0
+# torchcodec removed (not on PyPI, only in PyTorch nightly)
 
 # Transformers and related
 transformers>=4.30.0,<4.36.0
@@ -23,11 +23,11 @@ sentencepiece>=0.1.99
 sacremoses>=0.0.53
 jiwer>=3.0.0
 
-# TensorFlow (with compatible version)
-tf-keras>=2.15.0,<2.16.0
+# TensorFlow (GPU, requires Python 3.10 or 3.11 for stable 2.15)
 tensorflow>=2.15.0,<2.16.0
+keras>=2.15.0,<2.16.0
 
-# ONNX export (add this for your export script)
+# ONNX export
 optimum[onnxruntime]>=1.14.0
 onnx>=1.14.0
 onnxruntime>=1.16.0
